[gd_scene load_steps=6 format=3 uid="uid://4wj0g5tindp4"]

[ext_resource type="Script" path="res://UI/zoom_gui.gd" id="1_s4lgk"]
[ext_resource type="Texture2D" uid="uid://dvhlcnf1qwupx" path="res://Assets/ui/icons/1x/zoomIn.png" id="2_npog6"]
[ext_resource type="Texture2D" uid="uid://bgdcbc1k6jy0x" path="res://Assets/ui/icons/1x/zoomOut.png" id="3_gl8ow"]
[ext_resource type="Texture2D" uid="uid://bnaesmmmh1yex" path="res://Assets/ui/icons/1x/zoomDefault.png" id="4_kucs7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65t41"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="zoom_gui" type="PanelContainer"]
offset_right = 115.0
offset_bottom = 33.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_65t41")
script = ExtResource("1_s4lgk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="zoom_in_button" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(33, 33)
layout_mode = 2
tooltip_text = "Zoom in, or use mouse wheel"
texture_normal = ExtResource("2_npog6")
ignore_texture_size = true
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="zoom_out_button" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(33, 33)
layout_mode = 2
tooltip_text = "Zoom out, or use mouse wheel"
texture_normal = ExtResource("3_gl8ow")
ignore_texture_size = true
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="zoom_reset_button" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(33, 33)
layout_mode = 2
tooltip_text = "Reset zoom level"
texture_normal = ExtResource("4_kucs7")
ignore_texture_size = true
stretch_mode = 5
